[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Items/ActiveItemsHUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Health/HeartHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BossRoot.gd" type="Script" id=3]

[node name="BossRoot" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartHUD" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_right = 10.0
margin_bottom = 10.0

[node name="ActiveItemsHUD" parent="CanvasLayer" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
smoothing_speed = 8.0

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
